# EPA-Bachelorprojekt

./: .gitignore  CHANGES_SUMMARY.md  INSTALLATION.md  README.md  TOPIC_FILTERING_SUMMARY.md  TimelineCard_PowerPoint_Slides.md  requirements.txt
backend/: .env.example  Dockerfile  EVALUATION_OVERVIEW.md  README.md  TEST_RESULTS_LDA.md  TOPIC_MODELING_README.md  config.py  examples_statistical_usage.py  fix_html_entities.py  main.py  pyproject.toml  test_aggressive_topic_merging.py  test_lda_topic_modeling.py  test_sentiment_comparison.py  test_sentiment_modes.py  test_topic_accuracy.py  test_topic_modeling.py  test_topic_overview.py  train_models.py
backend/database/: supabase_client.py
backend/docs/: DASHBOARD_PERFORMANCE_IMPROVEMENTS.md  EMPLOYEE_TYPE_WEIGHTING.md  FINAL_IMPROVEMENTS_RESULTS.md  IMPLEMENTATION_CHECKLIST.md  LDA_SENTIMENT_PROJECT_HISTORY.md  MODEL_IMPROVEMENTS_2026_02_01.md  QUICKSTART_LDA.md  QUICKSTART_NEW_MODEL.md  QUICKSTART_TOPIC_MODELING.md  README.md  SENTIMENT_MODE_SELECTION.md  SUMMARY_EMPLOYEE_WEIGHTING.md  SUMMARY_FINAL_V2.1.md  TOPIC_ANALYSIS_EXPLANATION.md  TOPIC_MODELING_EVALUATION.md  TOPIC_MODELING_IMPROVEMENTS.md  TOPIC_OVERVIEW_API.md  TOPIC_RATING_ANALYSIS.md
backend/examples/: topic_modeling_examples.py  topic_rating_examples.py
backend/migrations/: 001_create_candidates_table.sql  002_create_employee_table.sql  003_create_companies_table.sql  004_add_company_references.sql
backend/models/: lda_topic_model.py  sentiment_analyzer.py
backend/routes/: analytics.py  companies.py  topics.py  upload.py
frontend/: package.json  (+2 more)
(+84 files in other folders)
