[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "gensim>=4.3.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
]
