[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "gensim>=4.3.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    "transformers>=5.1.0",
    "torch>=2.10.0",
    "statsmodels>=0.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
